自定义View2020/08/30完结

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".flow.FlowActivity"/>
         <activity android:name=".slide.SlideMenuActivity"/>
+        <activity android:name=".watchface.WatchFaceActivity"/>
 
     </application>
 
